syntax="proto3";

option java_multiple_files=true;
option java_package= "com.sdj3.logicServerSDJ3.protobuf.partProtobuf";

message PartMessage {

  int32 id=1;
  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}
message AddPartMessage {

  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}

service PartService{
  rpc creatPart(AddPartMessage)returns(PartMessage);
}

